Added agent health metrics (#9672)

--- a/apmpackage/apm/changelog.yml
+++ b/apmpackage/apm/changelog.yml
@@ -6,6 +6,9 @@
     - description: Remove `transaction.failure_count` and change `transaction.success_count` type to aggregate_metric_double
       type: enhancement
       link: https://github.com/elastic/apm-server/pull/9791
+    - description: Added agent health metrics
+      type: enhancement
+      link: https://github.com/elastic/apm-server/pull/9672
 - version: "8.6.0"
   changes:
     - description: Change `ecs.version` to a `constant_keyword` field
