Update to Go 1.19
Update the minimum Go version to 1.19 in go.mod,
and update .go-version with the specific Go patch
release. We continue to use a specific patch
release to ensure builds are reproducible.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,9 @@ jobs:
             go.sum
             tools/go.sum
       - run: make check-full
+      - name: Ensure .go-version is up to date
+        run: make update-go-version
+        if: ${{ github.ref == 'main' }}
 
   test:
     strategy:
