--- a/packaging/docker/Dockerfile
+++ b/packaging/docker/Dockerfile
@@ -1,8 +1,8 @@
 ARG BASE_IMAGE=ubuntu:20.04
 
 # Build the apm-server binary. The golang image version is kept
-# up to date with .go-version by Makefile.
-FROM golang:1.18.8 as builder
+# up to date with go.mod by Makefile.
+FROM golang:1.19.4 as builder
 WORKDIR /src
 COPY go.mod go.sum /src/
 COPY internal/approvaltest/go.mod /src/internal/approvaltest/go.mod
