--- a/apmpackage/apm/data_stream/internal_metrics/fields/ecs.yml
+++ b/apmpackage/apm/data_stream/internal_metrics/fields/ecs.yml
@@ -67,6 +67,8 @@
 - external: ecs
   name: event.outcome
 - external: ecs
+  name: event.duration
+- external: ecs
   name: host.architecture
 - external: ecs
   name: host.hostname
