--- a/apmpackage/apm/data_stream/traces/elasticsearch/ingest_pipeline/default.yml
+++ b/apmpackage/apm/data_stream/traces/elasticsearch/ingest_pipeline/default.yml
@@ -15,8 +15,16 @@ processors:
       name: client_geoip
   - pipeline:
       name: event_duration
-  - pipeline:
-      name: event_success_count
+  # event.success_count logic
+  - set:
+      if: ctx.event?.outcome == 'success'
+      field: event.success_count
+      value: 1
+  - set:
+      if: ctx.event?.outcome == 'failure'
+      field: event.success_count
+      value: 0
+  # end of event.success_count logic
   - remove:
       # Remove some metadata from spans that is available in the parent transaction, to cut down on storage costs.
       if: ctx.processor?.event == 'span'
