--- a/systemtest/approvals/TestTransactionAggregation.approved.json
+++ b/systemtest/approvals/TestTransactionAggregation.approved.json
@@ -7,7 +7,7 @@
                 "name": "go"
             },
             "data_stream": {
-                "dataset": "apm.internal.transaction.1s",
+                "dataset": "apm.transaction.1s",
                 "namespace": "default",
                 "type": "metrics"
             },
@@ -16,7 +16,7 @@
             },
             "event": {
                 "agent_id_status": "missing",
-                "duration": 1000000000,
+                "duration": "1000000000",
                 "ingested": "dynamic",
                 "outcome": "success"
             },
@@ -76,7 +76,7 @@
                 "name": "go"
             },
             "data_stream": {
-                "dataset": "apm.internal.transaction.1s",
+                "dataset": "apm.transaction.1s",
                 "namespace": "default",
                 "type": "metrics"
             },
@@ -85,7 +85,7 @@
             },
             "event": {
                 "agent_id_status": "missing",
-                "duration": 1000000000,
+                "duration": "1000000000",
                 "ingested": "dynamic",
                 "outcome": "success"
             },
@@ -167,7 +167,7 @@
                 "id": "container-id"
             },
             "data_stream": {
-                "dataset": "apm.internal.transaction.1s",
+                "dataset": "apm.transaction.1s",
                 "namespace": "default",
                 "type": "metrics"
             },
@@ -176,7 +176,7 @@
             },
             "event": {
                 "agent_id_status": "missing",
-                "duration": 1000000000,
+                "duration": "1000000000",
                 "ingested": "dynamic",
                 "outcome": "unknown"
             },
