--- a/systemtest/approvals/TestTransactionAggregationShutdown.approved.json
+++ b/systemtest/approvals/TestTransactionAggregationShutdown.approved.json
@@ -16,7 +16,7 @@
             },
             "event": {
                 "agent_id_status": "missing",
-                "duration": 1800000000000,
+                "duration": "1800000000000",
                 "ingested": "dynamic",
                 "outcome": "success"
             },
@@ -85,7 +85,7 @@
             },
             "event": {
                 "agent_id_status": "missing",
-                "duration": 3600000000000,
+                "duration": "3600000000000",
                 "ingested": "dynamic",
                 "outcome": "success"
             },
