Address more review comments
Signed-off-by: Marc Lopez Rubio <marc5.12@outlook.com>

--- a/apmpackage/apm/data_stream/internal_metrics/elasticsearch/ingest_pipeline/default.yml
+++ b/apmpackage/apm/data_stream/internal_metrics/elasticsearch/ingest_pipeline/default.yml
@@ -1,8 +1,8 @@
 ---
 description: Pipeline for ingesting APM internal metrics.
 processors:
-  - pipeline: # drop transaction metrics coming from older APM Server versions.
-      name: drop_tx_metrics
+  - drop:
+      if: ctx?.metricset?.name == "transaction"
   - pipeline:
       name: observer_version
   - pipeline:
