--- a/apmpackage/apm/data_stream/traces/fields/fields.yml
+++ b/apmpackage/apm/data_stream/traces/fields/fields.yml
@@ -1,3 +1,8 @@
+- name: agent.activation_method
+  type: keyword
+  index: false
+  description: |
+    The way the agent is installed / used.
 - name: child.id
   type: keyword
   description: |
