apmpackage: Template data_stream for 3 intervals
Update generator to allow `_interval_` templating for defined interval
in the generator code. Allows setting a data stream retention policy for
each of the defined intervals.

Signed-off-by: Marc Lopez Rubio <marc5.12@outlook.com>

--- a/apmpackage/apm/data_stream/transaction_interval_metrics/manifest.yml
+++ b/apmpackage/apm/data_stream/transaction_interval_metrics/manifest.yml
@@ -1,8 +1,7 @@
-title: APM transaction metrics
+title: APM transaction metrics {{ .Interval }}
 type: metrics
-dataset: apm.transaction
-dataset_is_prefix: true
-ilm_policy: metrics-apm.transaction_metrics-default_policy
+dataset: apm.transaction.{{ .Interval }}
+ilm_policy: metrics-apm.transaction_interval_metrics-default_policy.{{ .Interval }}
 elasticsearch:
   index_template:
     mappings:
