--- a/packaging/docker/Dockerfile
+++ b/packaging/docker/Dockerfile
@@ -78,7 +78,7 @@ COPY --chmod=0644 licenses/ELASTIC-LICENSE-2.0.txt NOTICE.txt /licenses/
 WORKDIR /usr/share/apm-server
 COPY --chmod=0644 apm-server.yml ./apm-server.yml
 COPY --chmod=0755 --from=builder /src/apm-server ./apm-server
-RUN sed -i 's/localhost:8200/0.0.0.0:8200/' apm-server.yml
+RUN sed -i 's/127.0.0.1:8200/0.0.0.0:8200/' apm-server.yml
 RUN sed -i 's/localhost:9200/elasticsearch:9200/' apm-server.yml
 RUN mkdir --mode=0777 data
 RUN echo 'apm-server:*:1000:0::/usr/share/apm-server:/bin/false' >> /etc/passwd
