--- a/apmpackage/apm/data_stream/traces/elasticsearch/ingest_pipeline/default.yml
+++ b/apmpackage/apm/data_stream/traces/elasticsearch/ingest_pipeline/default.yml
@@ -20,10 +20,12 @@ processors:
       if: ctx.event?.outcome == 'success'
       field: event.success_count
       value: 1
+      ignore_failure: true
   - set:
       if: ctx.event?.outcome == 'failure'
       field: event.success_count
       value: 0
+      ignore_failure: true
   # end of event.success_count logic
   - remove:
       # Remove some metadata from spans that is available in the parent transaction, to cut down on storage costs.
