Add metricset.interval field, route based on it
Signed-off-by: Marc Lopez Rubio <marc5.12@outlook.com>

--- a/apmpackage/apm/data_stream/transaction_interval_metrics/fields/fields.yml
+++ b/apmpackage/apm/data_stream/transaction_interval_metrics/fields/fields.yml
@@ -1,4 +1,4 @@
-- name: event.duration
+- name: metricset.interval
   type: constant_keyword
   description: Metricset aggregation interval.
 - name: faas.coldstart
