Change Service metrics txn events txn metrics (#9819)
Add `event.success_count` to transaction event and transaction metrics. Change `transaction.success_count` to `event.success_count` for service metrics.

closes #5243

--- a/apmpackage/apm/data_stream/traces/elasticsearch/ingest_pipeline/default.yml
+++ b/apmpackage/apm/data_stream/traces/elasticsearch/ingest_pipeline/default.yml
@@ -15,6 +15,18 @@ processors:
       name: client_geoip
   - pipeline:
       name: event_duration
+  # event.success_count logic
+  - set:
+      if: ctx.event?.outcome == 'success'
+      field: event.success_count
+      value: 1
+      ignore_failure: true
+  - set:
+      if: ctx.event?.outcome == 'failure'
+      field: event.success_count
+      value: 0
+      ignore_failure: true
+  # end of event.success_count logic
   - remove:
       # Remove some metadata from spans that is available in the parent transaction, to cut down on storage costs.
       if: ctx.processor?.event == 'span'
