--- a/apmpackage/apm/changelog.yml
+++ b/apmpackage/apm/changelog.yml
@@ -15,6 +15,9 @@
     - description: Add `event.success_count` for transaction events and transaction metrics. Rename `transaction.success_count` to `event.success_count` for service metrics.
       type: enhancement
       link: https://github.com/elastic/apm-server/pull/9819
+    - description: Cast event.duration to long in event_duration pipeline
+      type: bugfix
+      link: https://github.com/elastic/apm-server/pull/9901
     - description: Add transaction and service overflow metrics
       type: enhancement
       link: https://github.com/elastic/apm-server/pull/9856
